                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 19-05-2005 fixed: if you change the track format, cached filelists from my music -> library are cleared
 - 19-05-2005 added: the right column in my music is now controlled via a format string.  default is duration (%D)
 - 19-05-2005 fixed: info tag parser now correctly displays localized text in between items, thanks to desertbear
 - 19-05-2005 fixed: Seek(offset, SEEK_END) behaviour with files over Relax, XBMSP, iso9660, CDDA, SndTrk etc. was incorrect (caused tag issues among others).
 - 18-05-2005 added: info tag parser now hides text in between missing items, thanks to desertbear
 - 18-05-2005 fixed: FLAC buffer overrun (crash) on seek.
 - 18-05-2005 fixed/improved: Visualisation info fade in/fade out.
 - 18-05-2005 fixed: crash when swithing between fullscreen and small window when mplayer osd was visible
 - 18-05-2005 fixed: ttf subtitles sometimes didn't enable untill selected from sub selection, even thou mplayer subtitles where visible on screen
 - 17-05-2005 fixed: album info, cover art gets deleted when a lookup fails
 - 17-05-2005 changed: getting album info can be canceled now
 - 17-05-2005 fixed: [1199792] 2 seconds chopped off each track
 - 17-05-2005 fixed: play button does not revert to normal playback speed when seeking
 - 16-05-2005 fixed: SF Patch [1203229] Resume Video in My Videos context menu, thanks to deadken
 - 16-05-2005 added: SF patch [1200420] support for multiple info items and localized strings in a single label control, thanks to desertbear
                     use $INFO(<info manager string>) and $LOCALIZE(<string id>)