@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 20-05-2005 added: Replay gain support for ogg and flac files
  - 19-05-2005 fixed: if you change the track format, cached filelists from my music -> library are cleared
  - 19-05-2005 added: the right column in my music is now controlled via a format string.  default is duration (%D)
  - 19-05-2005 fixed: info tag parser now correctly displays localized text in between items, thanks to desertbear
